chore: Add Hebrew final forms explanation to 1.html

--- a/1.html
+++ b/1.html
@@ -39,6 +39,15 @@
     <p>ת Tav - 22 = T</p>
 </ol>
 
+In Hebrew, there are five letters that have different forms when they appear at the end of a word. These final forms are called “sofit” (סופית). Here they are:
+<ul>
+<li>ך (kaf sofit): This is the final form of the letter “kaf.”</li>
+<li>ם (mem sofit): This is the final form of the letter “mem.”</li>
+<li>ן (nun sofit): This is the final form of the letter “nun.”</li>
+<li>ף (pe sofit): This is the final form of the letter “pe.”</li>
+<li>ץ (tsadi sofit): This is the final form of the letter “tsadi.”</li>
+</ul>
+These letters are written differently when they appear at the end of a word, but their pronunciation remains the same. Interesting, isn’t it?
 <h3>Grammar</h3>
 <p>Hebrew is a very old language, and its grammar is quite different from English. Hebrew has a system of roots and patterns that are used to create words. Hebrew verbs have different forms for different
     subjects and objects, and Hebrew nouns have different forms for different verb tenses.</p>
